--- a/color.ini
+++ b/color.ini
@@ -1,200 +1,203 @@
 [Colors]
 InverseCursor=0
 InverseSelection=1
-BackColor=0
-ForeColor=16776960
-MarkColor=83450
-CursorColor=16743735
-CursorText=0
-BackColor2=0
+BackColor=3549736
+ForeColor=15923448
+MarkColor=5916484
+CursorColor=13007359
+CursorText=13007359
+BackColor2=3549736
 
 ColorFilter1=*+*.;*up.;*#.;
-ColorFilter1Color=16753488
+ColorFilter1Color=16640395
 ColorFilter2=*~*.
-ColorFilter2Color=16762391
+ColorFilter2Color=16640395
 ColorFilter3=*`*.;*^*.;
-ColorFilter3Color=16767057
+ColorFilter3Color=16640395
 ColorFilter4=*--.;*=.;*.*=;
-ColorFilter4Color=9210940
+ColorFilter4Color=16640395
 ColorFilter5=*-.;*.*-;
-ColorFilter5Color=10921555
+ColorFilter5Color=16640395
 ColorFilter6=*=.mp3;*=.ogg;*=.flac;*=.wav;*.d;*.internal;
-ColorFilter6Color=10049581
+ColorFilter6Color=8125008
 ColorFilter7=*--.mp3;*--.ogg;*--.flac;*--.wav;cmakelists.txt;*.cmake;
-ColorFilter7Color=11959092
+ColorFilter7Color=8125008
 ColorFilter8=cmake*.txt;cmake.;CMakeFiles.;*.make;*.*cache;
-ColorFilter8Color=12617325
+ColorFilter8Color=5592575
 ColorFilter9=*-.mp3;*-.ogg;*-.flac;*-.wav;*.pdb;dist*.;network*.;
-ColorFilter9Color=15439440
+ColorFilter9Color=8125008
 ColorFilter10=*`.mp3;*`.ogg;*`.flac;*`.wav;*.part;css;*.kll;
-ColorFilter10Color=16690294
+ColorFilter10Color=8125008
 ColorFilter11=*^.mp3;*^.ogg;*^.flac;*^.wav;tpl;
-ColorFilter11Color=16692869
+ColorFilter11Color=8125008
 ColorFilter12=*~.mp3;*~.ogg;*~.flac;*~.wav;
-ColorFilter12Color=16695708
+ColorFilter12Color=8125008
 ColorFilter13=*+.mp3;*+.ogg;*+.flac;*+.wav;*.ino;*.vcproj;*.vcxproj;
-ColorFilter13Color=16769226
+ColorFilter13Color=8125008
 ColorFilter14=*#.mp3;*#.ogg;*#.flac;*#.wav;
-ColorFilter14Color=16773350
+ColorFilter14Color=8125008
 ColorFilter15=*`*.jpg;images;
-ColorFilter15Color=16759778
+ColorFilter15Color=13007359
 ColorFilter16=*~*.jpg;
-ColorFilter16Color=16752091
+ColorFilter16Color=13007359
 ColorFilter17=*+*.jpg;
-ColorFilter17Color=16676552
+ColorFilter17Color=13007359
 ColorFilter18=*+*.avi;*+*.mpg;*+*.mpeg;*+*.wmv;*+*.mp4;*+*.flv;*+*.mkv;*+*.webm;
-ColorFilter18Color=16763611
+ColorFilter18Color=16356285
 ColorFilter19=*~*.avi;*~*.mpg;*~*.mpeg;*~*.wmv;*~*.mp4;*~*.flv;*~*.mkv;*~*.webm;
-ColorFilter19Color=16752066
+ColorFilter19Color=16356285
 ColorFilter20=*`*.avi;*`*.mpg;*`*.mpeg;*`*.wmv;*`*.mp4;*`*.flv;*`*.mkv;*`*.webm;vid*.;
-ColorFilter20Color=16676518
-ColorFilter21=*.iso;*.nrg;*.img;*.bin;*+.pdf;display.;
-ColorFilter21Color=13565928
+ColorFilter20Color=16356285
+ColorFilter21=*.iso;*.nrg;*.img;*.bin;
+ColorFilter21Color=5592575
 ColorFilter22=*.ttf;*`.pdf;*.dae;
-ColorFilter22Color=9958143
+ColorFilter22Color=7125247
 ColorFilter23=*.pdf;b;depend*.;proj*.;*.bullet;objects*.;
-ColorFilter23Color=326143
+ColorFilter23Color=7125247
 ColorFilter24=*.fx;*.psh;*.vsh;*.hlsl;*.cg;*.glsl;*.shd;*.shader;*.frag;*.vert;
-ColorFilter24Color=1170431
+ColorFilter24Color=7125247
 ColorFilter25=*.program;media;data;shade*.;effect*.;
-ColorFilter25Color=1825532
+ColorFilter25Color=7125247
 ColorFilter26=*.in;*.rb;*.sta;boost*.;addons.;
-ColorFilter26Color=7918334
+ColorFilter26Color=9239281
 ColorFilter27=*.hlp;*.chm;*.chi;*.chq;*.chw;gui*.;run*.;
-ColorFilter27Color=2993151
+ColorFilter27Color=9239281
 ColorFilter28=*.sql;*.ppt;*.pps;*rock*.;
-ColorFilter28Color=9150168
+ColorFilter28Color=9239281
 ColorFilter29=*.cnt;*.diz;*.dm2;hud*.;ardu*.;
-ColorFilter29Color=8170200
+ColorFilter29Color=9239281
 ColorFilter30=*.dsp;*.dsw;*.bpr;*.stw;*.cbp;*.workspace;*.desktop;*.eep;
-ColorFilter30Color=7171420
+ColorFilter30Color=5592575
 ColorFilter31=*.bak;*.tmp;Test*.;*.vspscc;*.vssscc;*.dmp;*.map;*.sym;tmp;*.bash;
-ColorFilter31Color=8421504
+ColorFilter31Color=5592575
 ColorFilter32=*.old;*.default;st*.;list*.;font*.;makefile*;*.mk;*st.;
-ColorFilter32Color=10395294
+ColorFilter32Color=5592575
 ColorFilter33=*.sln;sdk*.;*.dev;*v.lnk;VisualC*.;
-ColorFilter33Color=16771827
+ColorFilter33Color=9239281
 ColorFilter34=*.url;adr*.;*.rdp;descript.ion;
-ColorFilter34Color=16768185
+ColorFilter34Color=9239281
 ColorFilter35=*.csproj;*.sldprt;tools;home.;cyg*.;
-ColorFilter35Color=16765098
+ColorFilter35Color=9239281
 ColorFilter36=*.obj;*.class;*.fpt;obj;*.o;*.elf;*.less;
-ColorFilter36Color=12875833
+ColorFilter36Color=9239281
 ColorFilter37=*.m3u*;*.cue;*.plc;*.pls;*.diff;
-ColorFilter37Color=16087391
+ColorFilter37Color=8125008
 ColorFilter38=*.h;include;*.cuh;*.hpp;*Designer.cs;inc;
-ColorFilter38Color=16742777
+ColorFilter38Color=9239281
 ColorFilter39=*.cpp;*.c;source;src;*.cu;*.c++;*.cc;src*.lnk;*.ino;*goth*.;
-ColorFilter39Color=16755400
+ColorFilter39Color=9239281
 ColorFilter40=*.asp;*.aspx;*.ascx;*.php;htdocs.;wp-content;
-ColorFilter40Color=14910145
+ColorFilter40Color=9239281
 ColorFilter41=*.cs;*.java;*.vbs;vc*.;*.py;
-ColorFilter41Color=16747689
+ColorFilter41Color=9239281
 ColorFilter42=*.lib;lib;Properties;lib*.;*.ld;
-ColorFilter42Color=15369373
+ColorFilter42Color=5592575
 ColorFilter43=*.rm;*.asf;*.wmv;*.mov;*.mp4;*.rmvb;*.flv;cache.;*.3gp;*.webm;
-ColorFilter43Color=11500154
+ColorFilter43Color=16356285
 ColorFilter44=*.mkv;*.ts;*.vob;*.a;*.la;
-ColorFilter44Color=14443402
+ColorFilter44Color=16356285
 ColorFilter45=*.avi;*.mpg;*.mpeg;*.mpe;
-ColorFilter45Color=13266052
+ColorFilter45Color=16356285
 ColorFilter46=*.user;*.suo;*.idb;*.exp;*.aps;*.sbr;cvs.;*.linkinfo;thumbs.db;.svn;.hg*;.git*;*.filters;*.opensdf;
-ColorFilter46Color=10702928
+ColorFilter46Color=5592575
 ColorFilter47=*.ncb;*.pch;*.ilk;*.sdf;ipch.;
-ColorFilter47Color=11154783
+ColorFilter47Color=9239281
 ColorFilter48=*.rc;*.resx;*.inl;*.resources;*.blend?;*blk*.;*black*.;
-ColorFilter48Color=10369155
+ColorFilter48Color=7125247
 ColorFilter49=*.ico;*.cur;*.ani;*.xcf;
-ColorFilter49Color=2697664
+ColorFilter49Color=13007359
 ColorFilter50=*.x;*.mesh;*.x_t;model*.;
-ColorFilter50Color=8388863
+ColorFilter50Color=7125247
 ColorFilter51=*.max;*.3ds;*.scn;*.blend;
-ColorFilter51Color=11293183
+ColorFilter51Color=7125247
 ColorFilter52=*.dds;texture*.;
-ColorFilter52Color=16213751
+ColorFilter52Color=13007359
 ColorFilter53=*.bmp;*.pcx;*.tga;*.rgb;*power*.;
-ColorFilter53Color=12616447
+ColorFilter53Color=13007359
 ColorFilter54=*.gif;*.tif;*.psd;*.svg;*.pdn;anim*.;
-ColorFilter54Color=6776798
+ColorFilter54Color=13007359
 ColorFilter55=*.png;*.scntoc;preview*.;admin.;
-ColorFilter55Color=12093879
+ColorFilter55Color=13007359
 ColorFilter56=*.jpg;*.jpeg;*.jpe;sample*.;example*.;scre*.;scr;*demo*.;
-ColorFilter56Color=16765695
+ColorFilter56Color=13007359
 ColorFilter57=*.flac;*.ape;*.wv;*.sound;
-ColorFilter57Color=16756906
+ColorFilter57Color=8125008
 ColorFilter58=*.wav;wav;common;sound*.;
-ColorFilter58Color=16748945
+ColorFilter58Color=8125008
 ColorFilter59=*.mod;*.it;*.xm;*.stm;*.s3m;*script*;_*.;bullet*.;*.lst;*.lss;
-ColorFilter59Color=13998956
+ColorFilter59Color=9239281
 ColorFilter60=*.mp3;skin*.;theme*.;sky*.;mantis.;
-ColorFilter60Color=16756250
+ColorFilter60Color=8125008
 ColorFilter61=*.ogg;*.mpc;sdl*.;sfml*.;tee*.;
-ColorFilter61Color=14325046
+ColorFilter61Color=8125008
 ColorFilter62=*.wma
-ColorFilter62Color=12549154
+ColorFilter62Color=8125008
 ColorFilter63=*.htm;*.html;*.shtml;*.mht;
-ColorFilter63Color=16284673
+ColorFilter63Color=9239281
 ColorFilter64=*.js;*.css;
-ColorFilter64Color=13264128
+ColorFilter64Color=9239281
 ColorFilter65=*.set;*.sav;*.settings;set*.;conf*.;*.conf;layout*.;
-ColorFilter65Color=16760704
+ColorFilter65Color=5592575
 ColorFilter66=*.xml;*.layout;
-ColorFilter66Color=16763788
+ColorFilter66Color=9239281
 ColorFilter67=*.xsd;*.xdr;user*.;usr.;
-ColorFilter67Color=13421568
+ColorFilter67Color=9239281
 ColorFilter68=*.vssettings;*.m;*.cfg;*.out;*.config;*.scheme;*.tlh;*.def;*.idl;
-ColorFilter68Color=11049728
+ColorFilter68Color=9239281
 ColorFilter69=*.dll;Program*;Microsoft*.;util*.;*.hex;
-ColorFilter69Color=7653888
+ColorFilter69Color=5592575
 ColorFilter70=*.mdl;*.dwg;*.dwt;*.dxf;*.mnu;nx*.;nv*.;locale.;lang;
-ColorFilter70Color=2610793
+ColorFilter70Color=7125247
 ColorFilter71=*.exe;*.com;bin*.;plugins;system*.;run*.;*x.lnk;
-ColorFilter71Color=4128593
+ColorFilter71Color=5592575
 ColorFilter72=*.bat;*.cmd;edit*.;*.sh;
-ColorFilter72Color=7339894
+ColorFilter72Color=5592575
 ColorFilter73=*.lnk;*.cpl;*.rdp;
-ColorFilter73Color=13041606
+ColorFilter73Color=5592575
 ColorFilter74=*.dir;*.fnt;*.cf;*.cp;track*.;*.mat;
-ColorFilter74Color=13434743
+ColorFilter74Color=9239281
 ColorFilter75=*.material;*.clr;*.msi;*.theme;material*.;*.mtl;*.srt;*met*.;
-ColorFilter75Color=11980921
+ColorFilter75Color=13007359
 ColorFilter76=*.rar;*.7z;pack*.;
-ColorFilter76Color=10532608
+ColorFilter76Color=15923448
 ColorFilter77=*.zip;*.cab;*.pak;Redist*.;
-ColorFilter77Color=8623360
+ColorFilter77Color=15923448
 ColorFilter78=*.ace;*.tar;*.gz;*.tgz;*.arj;*.bz2;*.err;
-ColorFilter78Color=8946492
+ColorFilter78Color=15923448
 ColorFilter79=*.reg;*.ini;*.dat;*.lng;*.bar;*.raw;*.msc;driv*.;*.rgs;
-ColorFilter79Color=8101471
+ColorFilter79Color=5592575
 ColorFilter80=*.log;*.trk;
-ColorFilter80Color=7446392
+ColorFilter80Color=5592575
 ColorFilter81=*.sys;*.drv;*.vxd;*.ocx;*.tlb;*.acm;windows*.;
-ColorFilter81Color=4684874
+ColorFilter81Color=5592575
 ColorFilter82=*.overlay;*manifest;*.dpr;*.asm;release*.;RelWithDebInfo*.;
-ColorFilter82Color=39797
+ColorFilter82Color=5592575
 ColorFilter83=*.txt;*.nfo;*.md;*.wiki;*.markdown;*.md;
-ColorFilter83Color=54698
+ColorFilter83Color=9239281
 ColorFilter84=*.rtf;*.doc;*.odt;doc*;*.nsi;pages;wiki.;
-ColorFilter84Color=129216
+ColorFilter84Color=9239281
 ColorFilter85=*.inf;*.isu;*.uninstall;overlay*.;*-.pdf;
-ColorFilter85Color=52942
+ColorFilter85Color=5592575
 ColorFilter86=*.fon;*.xls;*.font;*.ods;
-ColorFilter86Color=3255982
+ColorFilter86Color=9239281
 ColorFilter87=*.pas;*.pif;
-ColorFilter87Color=33924
+ColorFilter87Color=9239281
 ColorFilter88=*.dep;*.res;*.dcu;*.dfm;*.dof;*.dcr;debug*.;
-ColorFilter88Color=27242
+ColorFilter88Color=9239281
 ColorFilter89=Vlc*.;
-ColorFilter89Color=24445
+ColorFilter89Color=16356285
 ColorFilter90=*.dcp;*.bpl;*.inc;*.~bpl;
-ColorFilter90Color=16512
+ColorFilter90Color=9239281
 ColorFilter91=*.dpk;*.bpk;*.fig;
-ColorFilter91Color=22476
-ColorFilter92=??-*.;???-*.;????-*.;
-ColorFilter92Color=16773171
-ColorFilter93=?-*.;
-ColorFilter93Color=10187124
+ColorFilter91Color=5592575
+ColorFilter92=*.ai;
+ColorFilter92Color=7125247
+ColorFilter93=??-*.;???-*.;????-*.;
+ColorFilter93Color=16640395
 ColorFilter94=*.;
-ColorFilter94Color=16316545
-ColorFilter95=>Directories
-ColorFilter95Color=16448171
+ColorFilter94Color=16640395
+ColorFilter95=?-*.;
+ColorFilter95Color=16640395
+ThemedCursor=0
+ColorFilter96=>Directories
+ColorFilter96Color=16640395
