Added colors for main window in dark mode

--- a/color.ini
+++ b/color.ini
@@ -308,3 +308,16 @@ CursorColor=13007359
 CursorText=13007359
 BackColor2=3549736
 ThemedCursor=0
+DarkBackground=3549736
+DarkHighlight=5916484
+CompareText=5592575
+CompareTextSel=16356285
+CompareBinary=5592575
+CompareBinarySel=16356285
+CompareSelText=13007359
+CompareSelBack=5916484
+CompareSearchLine=8125008
+SyncSelBack=5916484
+HintForeground=7125247
+HintBackground=5916484
+HintBorder=7125247
